Fix build with older versions of Snap

BUG: 396508